testsuite/tests/unboxedsums/sum_rr.stderr

sum_rr.hs:8:39: error:
    • The type ‘a’ is not an unboxed sum,
      and yet its kind suggests that it has the representation
      of an unboxed sum. This is not allowed.
    • In the definition of data constructor ‘Wat’
      In the data type declaration for ‘Wat’
